[package]
name = "lecturn"
version = "0.1.8"
edition = "2018"
authors = ["Noah Lavelle <noah.lavelle@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A terminal text editor"
readme = "README.md"
homepage = "https://github.com/NoahLavelle/lecturn"
repository = "https://github.com/NoahLavelle/lecturn"
keywords = ["terminal", "text", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1"
regex = "1"
